.chef/local-mode-cache/cache/chef-stacktrace.out
Generated at 2020-05-28 18:05:42 +0000
SyntaxError: /home/vagrant/.chef/local-mode-cache/cache/cookbooks/lamp/recipes/web.rb:13: syntax error, unexpected tIDENTIFIER, expecting ']'
service 'apache2' do
^~~~~~~
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/mixin/from_file.rb:34:in `instance_eval'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/mixin/from_file.rb:34:in `from_file'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/cookbook_version.rb:199:in `load_recipe'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/run_context.rb:393:in `load_recipe'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/run_context.rb:349:in `block in include_recipe'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/run_context.rb:348:in `each'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/run_context.rb:348:in `include_recipe'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/dsl/include_recipe.rb:26:in `include_recipe'
/home/vagrant/.chef/local-mode-cache/cache/cookbooks/lamp/recipes/default.rb:12:in `from_file'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/mixin/from_file.rb:34:in `instance_eval'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/mixin/from_file.rb:34:in `from_file'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/cookbook_version.rb:199:in `load_recipe'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/run_context.rb:393:in `load_recipe'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/run_context/cookbook_compiler.rb:166:in `block in compile_recipes'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/run_context/cookbook_compiler.rb:163:in `each'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/run_context/cookbook_compiler.rb:163:in `compile_recipes'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/run_context/cookbook_compiler.rb:79:in `compile'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/run_context.rb:223:in `load'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/policy_builder/expand_node_object.rb:103:in `setup_run_context'
/opt/chefdk/embedded/lib/ruby/2.6.0/forwardable.rb:230:in `setup_run_context'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/client.rb:487:in `setup_run_context'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/client.rb:284:in `run'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/application.rb:320:in `run_with_graceful_exit_option'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/application.rb:296:in `block in run_chef_client'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/local_mode.rb:42:in `with_server_connectivity'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/application.rb:279:in `run_chef_client'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/application/base.rb:330:in `run_application'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-15.7.32/lib/chef/application.rb:69:in `run'
/opt/chefdk/embedded/lib/ruby/gems/2.6.0/gems/chef-bin-15.7.32/bin/chef-client:25:in `<top (required)>'
/usr/bin/chef-client:349:in `load'
/usr/bin/chef-client:349:in `<main>'